--- a/src/MultiAlignRogue/MainWindow.xaml
+++ b/src/MultiAlignRogue/MainWindow.xaml
@@ -2,7 +2,6 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:multiAlignRogue="clr-namespace:MultiAlignRogue"
-        xmlns:utils="clr-namespace:MultiAlignRogue.Utils"
         xmlns:featureFinding="clr-namespace:MultiAlignRogue.Feature_Finding"
         xmlns:alignment="clr-namespace:MultiAlignRogue.Alignment"
         Title="{Binding WindowTitle}" Height="600" Width="1100" x:Name="RogueMainWindow">
@@ -16,11 +15,9 @@
         <KeyBinding Key="S" Modifiers="Control" Command="{Binding SaveProjectCommand}" />
     </Window.InputBindings>
 
-    <Grid Name ="MainGrid">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="475" />
-        </Grid.ColumnDefinitions>
+    <Grid Name="MainGrid">
+        
+        <!-- Menu -->
         <Menu Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="{Binding ElementName=MainGrid,Path=ActualWidth}">
             <MenuItem Header="File">
                 <MenuItem Header="New Project" Command="{Binding CreateNewProjectCommand}" />
@@ -35,84 +32,93 @@
                 <MenuItem Header="Save Project As" Command="{Binding SaveAsProjectCommand}" />
             </MenuItem>
         </Menu>
-        <!--<ProgressBar HorizontalAlignment="Right" Margin="0,0,10,19" Width="90" Height="20" VerticalAlignment="Bottom" Value="{Binding ProgressTracker, Mode = OneWay}"/> -->
-        <DataGrid Name="FileSelectionDataGrid" Grid.Column="0" HorizontalAlignment="Stretch" Margin="0,53,20,12"
+        
+        <!-- Actual content -->
+        <Grid Margin="10,25,10,10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="475" />
+            </Grid.ColumnDefinitions>
+
+            <!-- File list data grid -->
+            <Grid Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="25" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+
+                <TextBlock FontSize="16" Grid.Row="0" Margin="0,0,0,3">Working Data Files</TextBlock>
+
+                <DataGrid Name="FileSelectionDataGrid" Grid.Row="1" Margin="0,0,10,0"
                   AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserAddRows="False" 
                   ItemsSource="{Binding Datasets, UpdateSourceTrigger=PropertyChanged}" SelectionChanged="DataGrid_SelectionChanged">
-            <DataGrid.Columns>
-                <DataGridTemplateColumn Width="25">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Button Content="-" Command="{Binding RequestRemovalCommand}" />
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="Dataset Name" Width="*">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Grid>
-                                <ProgressBar Value="{Binding Progress}" Visibility="{Binding DoingWork, Converter={StaticResource BoolToVis}}" />
-                                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Dataset.DatasetName}" />
-                            </Grid>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridCheckBoxColumn Header="Features" Width="60" IsReadOnly="True" Binding="{Binding FeaturesFound, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                    <DataGridCheckBoxColumn.CellStyle>
-                        <Style TargetType="{x:Type DataGridCell}">
-                            <Setter Property="Background" Value="{Binding FindingFeatureLabelColor, UpdateSourceTrigger=PropertyChanged}" />
-                        </Style>
-                    </DataGridCheckBoxColumn.CellStyle>
-                </DataGridCheckBoxColumn>
-                <DataGridCheckBoxColumn Header="Aligned" Width="60" IsReadOnly="True" Binding="{Binding IsAligned, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                    <DataGridCheckBoxColumn.CellStyle>
-                        <Style TargetType="{x:Type DataGridCell}">
-                            <Setter Property="Background" Value="{Binding AligningLabelColor, UpdateSourceTrigger=PropertyChanged}" />
-                        </Style>
-                    </DataGridCheckBoxColumn.CellStyle>
-                </DataGridCheckBoxColumn>
-                <DataGridCheckBoxColumn Header="Clustered" Width="60" IsReadOnly="True" Binding="{Binding IsClustered, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                    <DataGridCheckBoxColumn.CellStyle>
-                        <Style TargetType="{x:Type DataGridCell}">
-                            <Setter Property="Background" Value="{Binding ClusterLabelColor, UpdateSourceTrigger=PropertyChanged}" />
-                        </Style>
-                    </DataGridCheckBoxColumn.CellStyle>
-                </DataGridCheckBoxColumn>
-            </DataGrid.Columns>
-        </DataGrid>
+                    <DataGrid.Columns>
+                        <DataGridTemplateColumn Width="25">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Content="-" Command="{Binding RequestRemovalCommand}" />
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                        <DataGridTemplateColumn Header="Dataset Name" Width="*">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Grid>
+                                        <ProgressBar Value="{Binding Progress}" Visibility="{Binding DoingWork, Converter={StaticResource BoolToVis}}" />
+                                        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Dataset.DatasetName}" />
+                                    </Grid>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                        <DataGridCheckBoxColumn Header="Features" Width="60" IsReadOnly="True" Binding="{Binding FeaturesFound, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                            <DataGridCheckBoxColumn.CellStyle>
+                                <Style TargetType="{x:Type DataGridCell}">
+                                    <Setter Property="Background" Value="{Binding FindingFeatureLabelColor, UpdateSourceTrigger=PropertyChanged}" />
+                                </Style>
+                            </DataGridCheckBoxColumn.CellStyle>
+                        </DataGridCheckBoxColumn>
+                        <DataGridCheckBoxColumn Header="Aligned" Width="60" IsReadOnly="True" Binding="{Binding IsAligned, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                            <DataGridCheckBoxColumn.CellStyle>
+                                <Style TargetType="{x:Type DataGridCell}">
+                                    <Setter Property="Background" Value="{Binding AligningLabelColor, UpdateSourceTrigger=PropertyChanged}" />
+                                </Style>
+                            </DataGridCheckBoxColumn.CellStyle>
+                        </DataGridCheckBoxColumn>
+                        <DataGridCheckBoxColumn Header="Clustered" Width="60" IsReadOnly="True" Binding="{Binding IsClustered, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                            <DataGridCheckBoxColumn.CellStyle>
+                                <Style TargetType="{x:Type DataGridCell}">
+                                    <Setter Property="Background" Value="{Binding ClusterLabelColor, UpdateSourceTrigger=PropertyChanged}" />
+                                </Style>
+                            </DataGridCheckBoxColumn.CellStyle>
+                        </DataGridCheckBoxColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </Grid>
 
-        <TabControl Grid.Column="1" Margin="10,25,10,10">
-            <TabItem Header="1. Feature Finding" Height="23" VerticalAlignment="Bottom" DataContext="{Binding FeatureFindingSettingsViewModel, UpdateSourceTrigger=PropertyChanged}">
-                <featureFinding:FeatureFindingSettings Margin="5" />
-            </TabItem>
-            <TabItem Header="2. Alignment" HorizontalAlignment="Left" DataContext="{Binding AlignmentSettingsViewModel, UpdateSourceTrigger=PropertyChanged}">
-                <alignment:AlignmentSettings Margin="5" />
-            </TabItem>
-            <TabItem Header="3. Clustering" DataContext="{Binding ClusterSettingsViewModel}">
-                <Grid>
-                    <Label Content="Clustering Method" HorizontalContentAlignment="Left" Height="28" VerticalAlignment="Top" Margin="10,11,0,0" Width="150" HorizontalAlignment="Left" FontWeight="Bold"/>
-                    <ComboBox Margin="10,37,278,0" SelectedItem="{Binding SelectedLcmsFeatureClusteringAlgorithm}"
+            <!-- Settings -->
+            <TabControl Grid.Column="1">
+                <TabItem Header="1. Feature Finding" DataContext="{Binding FeatureFindingSettingsViewModel, UpdateSourceTrigger=PropertyChanged}">
+                    <featureFinding:FeatureFindingSettings Margin="5" />
+                </TabItem>
+                <TabItem Header="2. Alignment" DataContext="{Binding AlignmentSettingsViewModel, UpdateSourceTrigger=PropertyChanged}">
+                    <alignment:AlignmentSettings Margin="5" />
+                </TabItem>
+                <TabItem Header="3. Clustering" DataContext="{Binding ClusterSettingsViewModel}">
+                    <Grid>
+                        <Label Content="Clustering Method" HorizontalContentAlignment="Left" Height="28" VerticalAlignment="Top" Margin="10,11,0,0" Width="150" HorizontalAlignment="Left" FontWeight="Bold"/>
+                        <ComboBox Margin="10,37,278,0" SelectedItem="{Binding SelectedLcmsFeatureClusteringAlgorithm}"
                               ItemsSource="{Binding ClusteringMethods}" Height="22" VerticalAlignment="Top"/>
-                    <Label Content="Distance Function" Margin="10,62,298,0" FontWeight="Bold" Height="26" VerticalAlignment="Top"/>
-                    <ComboBox Margin="10,88,278,0" SelectedItem="{Binding SelectedDistanceFunction}" ItemsSource="{Binding DistanceMetrics}" Height="22" VerticalAlignment="Top"/>
-                    <Label Content="Centroid Representation" Margin="275,11,13,0" FontWeight="Bold" Height="26" VerticalAlignment="Top"/>
-                    <ComboBox Margin="275,37,13,0" SelectedItem="{Binding SelectedCentroidMethod}" ItemsSource="{Binding CentroidRepresentations}" Height="22" VerticalAlignment="Top"/>
-                    <CheckBox Content="Separate by Charge" Margin="275,75,25,0" FontWeight="Bold" Height="22" VerticalAlignment="Top" 
+                        <Label Content="Distance Function" Margin="10,62,298,0" FontWeight="Bold" Height="26" VerticalAlignment="Top"/>
+                        <ComboBox Margin="10,88,278,0" SelectedItem="{Binding SelectedDistanceFunction}" ItemsSource="{Binding DistanceMetrics}" Height="22" VerticalAlignment="Top"/>
+                        <Label Content="Centroid Representation" Margin="275,11,13,0" FontWeight="Bold" Height="26" VerticalAlignment="Top"/>
+                        <ComboBox Margin="275,37,13,0" SelectedItem="{Binding SelectedCentroidMethod}" ItemsSource="{Binding CentroidRepresentations}" Height="22" VerticalAlignment="Top"/>
+                        <CheckBox Content="Separate by Charge" Margin="275,75,25,0" FontWeight="Bold" Height="22" VerticalAlignment="Top" 
                               IsChecked="{Binding ShouldSeparateByCharge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                    <Button Content="Cluster Features" Margin="12,0,323,10" Height="24" Command="{Binding ClusterFeaturesCommand}" VerticalAlignment="Bottom"/>
-                    <Button Content="View Clusters" Margin="322,0,13,10" Height="24" Command="{Binding DisplayClustersCommand}" VerticalAlignment="Bottom"/>
-                </Grid>
-            </TabItem>
-        </TabControl>
-        <Label Content="Working Data Files" HorizontalContentAlignment="Left" Height="28" Margin="10,25,0,0" VerticalAlignment="Top" Width="211" HorizontalAlignment="Left" FontSize="14"/>
-        <!--<TextBox HorizontalAlignment="Left" Margin="10,0,0,19" Text="{Binding InputFilePath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" Width="275" Height="22" VerticalAlignment="Bottom">
-            <TextBox.InputBindings>
-                <KeyBinding Command="{Binding AddFolderCommand}" Key="Enter" />
-            </TextBox.InputBindings>
-        </TextBox>
-
-        <Button Content="Browse" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="50" Height="22" Margin="290,0,0,19" Command="{Binding SelectDirectoryCommand}"></Button>
-        <Button Content="Add" HorizontalAlignment="Left" Margin="344,0,0,19" Width="50" Height="22" VerticalAlignment="Bottom" Command="{Binding AddFolderCommand}"/> -->
-
+                        <Button Content="Cluster Features" Margin="12,0,323,10" Height="24" Command="{Binding ClusterFeaturesCommand}" VerticalAlignment="Bottom"/>
+                        <Button Content="View Clusters" Margin="322,0,13,10" Height="24" Command="{Binding DisplayClustersCommand}" VerticalAlignment="Bottom"/>
+                    </Grid>
+                </TabItem>
+            </TabControl>
+        </Grid>
     </Grid>
 </Window>
